Changes for 2.0.5rc1

Bug fixes:
.......PS. [ZBX-5919] removed OCI_COMMIT_ON_SUCCESS option for sql statements in transaction on Orable backend (Sasha)
..F....... [ZBX-5869] fixed configuration graph host id detection (Eduard)
..F....... [ZBX-3754] fixed "Undefined variable" in the trigger expression constructor (Sasha)
..F....... [ZBX-3038] fixed the trigger expression constructor to parse expressions created in log wizard (Sasha)
..F....... [ZBX-2793] added possibility to add macros without an item in the trigger expression (Sasha)
..F....... [ZBX-5896] fixed inserting OR condition the trigger expression constructor (Sasha)
A.F....... [ZBX-5833] fixed inserting a macro in the trigger expression constructor (Sasha)
..F....... [ZBX-5884] improved the trigger expression constructor to work with parentheses (Sasha)

--------------------------------------------------------------------------------
Changes for 2.0.4

2.0.4rc1 was released as 2.0.4 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.4rc1

New features:
A.F....... [ZBX-1357] added initial Portuguese (Portugal) translation (Richlv)
..F....... [ZBXNEXT-1398] implemented flickerfree screen shadowing for old screen data (Eduard)
A.F....... [ZBX-1357] added initial Indonesian translation (Richlv)
..F....... [ZBXNEXT-1393] fixed global scripts font (Eduard)
.......PS. [ZBX-4638] added support of {HOST.HOST}, {HOST.NAME}, {HOST.IP}, {HOST.DNS} and {HOST.CONN} macros in "params" field for SSH, Telnet and DB monitor items (Sasha)
.....J.... [ZBX-4663] added possibility to use dots in JMX attribute names (dimir)
..F....... [ZBX-5556] action recovery message body can now be empty (Vedmak)
A.F....... [ZBX-1357] updated American English, Brazilian Portuguese, Chinese (China), Chinese (Taiwan), Czech, French, German, Hungarian, Italian, Japanese, Latvian, Polish, Slovak, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)